--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matthew Menchinton",
-  "license": "GNU",
+  "license": "MIT",
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^5.0.0-beta.2",
